tests/baselines/reference/tsxPreserveEmit1.errors.txt
react.d.ts(6,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
test.tsx(9,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
test.tsx(12,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== test.tsx (2 errors) ====
    // Should emit 'react-router' in the AMD dependency list
    import React = require('react');
    import ReactRouter = require('react-router');
    
    import Route = ReactRouter.Route;
    
    var routes1 = <Route />;
    
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	export var X: any;
    }
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	// Should emit 'M.X' in both opening and closing tags
    	var y = <X></X>;
    }
    
==== react.d.ts (1 errors) ====
    declare module 'react' {
    	var x: any;
    	export = x;
    }
    
    declare module ReactRouter {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	var Route: any;
    	interface Thing { }
    }
    declare module 'react-router' {
    	export = ReactRouter;
    }
    